bug:fixing missing background color

--- a/css/akanPage.css
+++ b/css/akanPage.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("../Assets/akan1.jpg");
   background-size: cover;
+  /* background-repeat: no-repeat; */
   font-family: "RocknRoll One", sans-serif !important;
 }
 
@@ -22,9 +23,11 @@ body {
 #result {
   text-align: center;
   opacity: 0.6;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-size: 1em;
   font-weight: 500;
+  background-color: #000000;;
+  /* border: 2px solid red; */
 }
 
 @media only screen and (min-width: 768px) {
